# hopeit.agents

./: Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: hopeit-agents-qa.yml
docker/: Dockerfile  entrypoint.sh
examples/apps/example-agents/: README.md  pyproject.toml
examples/apps/example-agents/config/: app-config.json
examples/apps/example-agents/config/agents/: main-agent-prompt.md  skills-agent-prompt.md
examples/apps/example-agents/src/hopeit_agents/example_agents/: models.py
examples/apps/example-agents/src/hopeit_agents/example_agents/agents/: agent_with_skills.py  expert_agent.py  main_agent.py  skills_agent.py
examples/plugins/example-skills/: pyproject.toml
examples/plugins/example-skills/config/: plugin-config.json
examples/plugins/example-skills/src/hopeit_agents/example_skills/skills/data_generation/: generate_random.py
examples/plugins/example-skills/src/hopeit_agents/example_skills/skills/math/: sum_two_numbers.py
examples/plugins/example-tool/: README.md  pyproject.toml
plugins/agents/agent-toolkit/: README.md  pyproject.toml
plugins/agents/agent-toolkit/src/hopeit_agents/agent_toolkit/: __init__.py  settings.py
plugins/agents/agent-toolkit/src/hopeit_agents/agent_toolkit/agents/: __init__.py  prompts.py
plugins/agents/agent-toolkit/test/unit/: test_agent_config_utils.py  test_agent_loop.py  test_agent_tools.py  test_prompts.py
plugins/agents/agent-tools/: pyproject.toml
plugins/agents/agent-tools/config/: plugin-config.json
plugins/agents/model-client/: README.md  pyproject.toml
plugins/agents/model-client/config/: plugin-config.json
plugins/agents/model-client/src/hopeit_agents/model_client/: __init__.py  client.py  conversation.py  models.py  settings.py
plugins/agents/skills/: pyproject.toml
plugins/agents/skills/config/: plugin-config.json
plugins/agents/skills/src/hopeit_agents/skills/: api.py  models.py  runner.py  setup.py
plugins/mcp/mcp-client/: README.md  pyproject.toml
plugins/mcp/mcp-client/src/hopeit_agents/mcp_client/: agent_tooling.py  client.py  models.py
plugins/mcp/mcp-client/test/unit/: test_client.py
plugins/mcp/mcp-server/: README.md  pyproject.toml
plugins/mcp/mcp-server/test/integration/: test_mcp_server_integration.py
plugins/mcp/mcp-server/test/unit/: test_tools_api.py
(+10 files in other folders)
